--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -11,7 +11,7 @@
       </div>
   </div>
   <div class="nav-wrapper container">
-      <a href="/" class="brand-logo font-style"><i class="material-icons">camera</i>Mahaputera.art</a>
+      <a href="/" class="brand-logo font-style">Mahaputera.art</a>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
           <li><a href="https://mahaputera.art">Home</a></li>
