auto trigger hash

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,9 +13,10 @@
 
             if (window.location.hash){
               var hash = window.location.hash.substring(2);
-              if (hash){
-                $('#'+hash+'').trigger("click");
-              }
+              console.log(hash);
+              // if (hash){
+              //   $('#'+hash+'').trigger("click");
+              // }
             }
         });
 
