--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,7 +13,7 @@
 
             if (window.location.hash){
               var hash = window.location.hash.substring(1);
-              var n = str.search("#");
+              var n = hash.search("#");
               var subhash = window.location.hash.substring(n);
               console.log(hash);
               console.log(subhash);
