--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,7 +14,7 @@
             if (window.location.hash){
               var hash = window.location.hash.substring(1);
               var n = hash.search("#");
-              var subhash = window.location.hash.substring(n);
+              var subhash = window.location.hash.substring(n+1);
               console.log(hash);
               console.log(subhash);
               // if (hash){
