--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -35,8 +35,8 @@
       <div class="categories-container">
           <ul class="categories container">
               <li class="active"><a href="#all">All</a></li>
-              <li><a href="#nature">Nature</a></li>
-              <li><a href="#culture">Culture</a></li>
+              <li><a href="#nature" id="nature">Nature</a></li>
+              <li><a href="#culture" id="culture">Culture</a></li>
           </ul>
       </div>
   </div>
