--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
     <script src="{{ "/assets/js/gallery.min.js" | prepend: site.baseurl }}"></script>
     <script>
 
-        $(document).ready(function(){
+        $(window).on("load", function() {
             $(".preloader").fadeOut(3000);
             $('.tap-target').tapTarget('open');
 
@@ -15,8 +15,6 @@
               var hash = window.location.hash.substring(1);
               var n = hash.search("#");
               var subhash = window.location.hash.substring(n+2);
-              console.log(hash);
-              console.log(subhash);
               if (hash == subhash){
                 $('#'+hash+'').trigger("click");
               }
