test no bg video

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -114,12 +114,12 @@
           player.stopVideo();
           $('#vid_control').html('<i class="material-icons large">play_arrow</i>');
           $('.bg-image').removeAttr("style");
-          $('.video-background').attr("style", "display: none;");
+          // $('.video-background').attr("style", "display: none;");
         }else{
           player.playVideo();
           $('#vid_control').html('<i class="material-icons large">stop</i>');
-          $('.bg-image').attr("style", "display: none;");
-          $('.video-background').removeAttr("style");
+          // $('.bg-image').attr("style", "display: none;");
+          // $('.video-background').removeAttr("style");
         }
       }
 
